[gd_scene load_steps=7 format=2]

[ext_resource path="res://Screens/StartScreen.gd" type="Script" id=1]
[ext_resource path="res://UI/ScreenButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Theme/Theme.tres" type="Theme" id=3]
[ext_resource path="res://Theme/RabbidHighwaySignII.otf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 64
extra_spacing_top = 20
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 64
extra_spacing_top = 20
font_data = ExtResource( 4 )

[node name="StartScreen" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="TempBackground" type="ColorRect" parent="."]
margin_right = 2560.0
margin_bottom = 1440.0
color = Color( 0.788235, 0.803922, 1, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 2560.0

[node name="Title" type="TextureRect" parent="CenterContainer"]
margin_left = 1280.0
margin_right = 1280.0

[node name="CenterContainer2" type="CenterContainer" parent="."]
margin_top = 850.0
margin_right = 2560.0
margin_bottom = 1113.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer2"]
margin_left = 1146.0
margin_right = 1413.0
margin_bottom = 358.0
custom_constants/separation = 35

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer2/VBoxContainer"]
margin_right = 267.0
margin_bottom = 96.0

[node name="PlayButton" parent="CenterContainer2/VBoxContainer/CenterContainer" instance=ExtResource( 2 )]
unique_name_in_owner = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 59.0
margin_right = 207.0
margin_bottom = 96.0

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer2/VBoxContainer"]
margin_top = 131.0
margin_right = 267.0
margin_bottom = 227.0

[node name="SettingsButton" parent="CenterContainer2/VBoxContainer/CenterContainer2" instance=ExtResource( 2 )]
unique_name_in_owner = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 1 )
text = "Settings"

[node name="CenterContainer3" type="CenterContainer" parent="CenterContainer2/VBoxContainer"]
margin_top = 262.0
margin_right = 267.0
margin_bottom = 358.0

[node name="QuitButton" parent="CenterContainer2/VBoxContainer/CenterContainer3" instance=ExtResource( 2 )]
unique_name_in_owner = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 63.0
margin_right = 203.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 2 )
text = "Quit"

[node name="Popup" type="Popup" parent="."]
margin_right = 744.0
margin_bottom = 338.0
popup_exclusive = true

[node name="Panel" type="PanelContainer" parent="Popup"]
margin_right = 744.0
margin_bottom = 338.0

[node name="VBoxContainer" type="VBoxContainer" parent="Popup/Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 737.0
margin_bottom = 331.0
custom_constants/separation = 80

[node name="Label" type="Label" parent="Popup/Panel/VBoxContainer"]
margin_right = 730.0
margin_bottom = 161.0
text = "Do you want to quit the game?"
align = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="Popup/Panel/VBoxContainer"]
margin_top = 241.0
margin_right = 730.0
margin_bottom = 320.0
custom_constants/separation = 150
alignment = 1

[node name="ConfirmQuitButton" type="Button" parent="Popup/Panel/VBoxContainer/HBoxContainer"]
margin_left = 107.0
margin_right = 247.0
margin_bottom = 79.0
text = "Quit"

[node name="CancelQuitButton" type="Button" parent="Popup/Panel/VBoxContainer/HBoxContainer"]
margin_left = 397.0
margin_right = 622.0
margin_bottom = 79.0
text = "Cancel"

[connection signal="pressed" from="CenterContainer2/VBoxContainer/CenterContainer3/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Popup/Panel/VBoxContainer/HBoxContainer/ConfirmQuitButton" to="." method="_on_confirm_quit_button_pressed"]
[connection signal="pressed" from="Popup/Panel/VBoxContainer/HBoxContainer/CancelQuitButton" to="." method="_on_cancel_quit_button_pressed"]
